# lemon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exampleapp.h  lemon.cbp  lemon.depend  main.c
examples/: CMakeLists.txt  simple_demo.cpp
lemon/src/ui/: ui.glade
linux/: lemon.desktop
src/: pieceTreeBase.cpp  pieceTreeBase.h  pieceTreeBuilder.cpp  pieceTreeBuilder.h  rbTreeBase.cpp  rbTreeBase.h
src/common/: charCode.cpp  charCode.h  position.cpp  position.h  range.cpp  range.h
src/lemon/: CMakeLists.txt
src/lemon/src/luajit/: .relver
src/lemon/src/ui/: #MainUI.glade#  LemonActivityBar.cpp  LemonActivityBar.h  LemonApp.cpp  LemonApp.h  LemonApplication.cpp  LemonApplication.h  LemonEditStack.cpp  LemonEditStack.h  LemonHeaderBar.cpp  LemonHeaderBar.h  LemonMenu.cpp  LemonMenu.h  LemonStatusBar.cpp  LemonStatusBar.h  LemonWindow.cpp  LemonWindow.h  MainUI.glade  MainUI.glade~  lemon_editor.glade~  main.cpp  mainwidnow.glade~  ui.glade  ui.glade~
src/lemon/src/ui/glade/: menu_edit.glade
src/lexilla/: CMakeLists.txt
src/lexilla/cmake/: LexillaConfig.cmake.in
src/scintilla/: .hg_archival.txt  CMakeLists.txt
src/scintilla/cmake/: ScintillaConfig.cmake.in
